--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,8 @@ fabric.properties
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,visualstudiocode
+
+
+.coverage
+__pycache__
+.idea
